--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-/* .App {
-  text-align: center;
+.App {
+  /* text-align: center; */
+  /* position: absolute; */
 }
-
+/* 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
