--- a/src/Components/Contact/ContactForm/ContactForm.css
+++ b/src/Components/Contact/ContactForm/ContactForm.css
@@ -3,3 +3,18 @@
     height: 300px;
     background-color: powderblue;
 }
+
+.card {
+    padding: 3%;
+}
+
+.center-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-btn{
+    width: 100px;
+}
