--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,47 +1,80 @@
-.container-fluid{
-    padding: 5% 15%;
-    background-color: peachpuff;
-}
 
 .landing{
-    padding: 7% 5%;
-    background-color: plum;
+    padding: 3% 5%;
+    /* background-color: plum; */
     font-family: Montserrat;
-    height: 80%;
+    /* height: 80%; */
+    display: flex;
+    justify-content: space-evenly;
 }
 .hello{
     font-weight: 800;
-    font-size: 155px;
+    font-size: 280px;
+    color: rgb(235, 235, 235);
 }
 
 .mallory-dalley{
     font-weight: 500;
-    font-size: 50px;
+    font-size: 70px;
+ }
+
+ .picture-side{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     /* background-color: azure; */
+
  }
 
 .profile-pic{
-    height: 340px;
+    height: 350px;
 }
 
 .colored-background{
-    background-color: lightsteelblue;
+    background-color: #5ec4d2;
     z-index: 1;
-    height: 550px;
+    height: 350px;
     width: 100%;
     position: absolute;
 }
 
 .intro-container{
-    /* background-color: lime; */
+    background-color: #5ec4d2;
+    width: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;  
 }
 
 .intro{
-    padding: 7% 15%;
+    padding: 10% 15%;
     text-align: center;
     font-size: 25px;
+    color: white;
+    font-weight: bold;
+    /* z-index: 2; */
+
+}
+
+
+.skill-container{
+    /* background-color: skyblue; */
+}
+
+.skill-block{
+    /* background-color: lightgray; */
+    padding: 0 30px 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.skills{
+    background-color: white;
+    flex-direction: column;
+    padding: 15px;
+    position: absolute;
+    z-index: 2;
 }
 
 .skill-icons{
@@ -53,8 +86,6 @@
     font-weight: 800;
     color: #5ec4d2;
 }
-
-
 
 .skill-section{
     font-weight: 600;
@@ -69,25 +100,6 @@ p{
 .dummy{
     height: 100px;
     width: 100px;
-}
-
-.skill-container{
-    background-color: skyblue;
-}
-
-.skill-block{
-    background-color: white;
-    padding: 25% 30px 0px;
-    display: flex;
-    justify-content: center;
-}
-
-.skills{
-    background-color: white;
-    flex-direction: column;
-    padding: 15px;
-    position: absolute;
-    z-index: 2;
 }
 
 .marketing-skills{
@@ -113,16 +125,17 @@ p{
     border-right: 1px solid lightgray;
     border-left: 1px solid lightgray;
 }
-    .designer-skills{
+.designer-skills{
     border-radius: 0px 0px 15px 15px;
 }
 .skill-block{
-    padding: 65% 30px;
+    padding: 25% 30px 35%;
 }
 .colored-background{
-    height: 850px;
+    height: 800px;
 }
 .intro{
-    padding: 25% 15%;
+    padding-top: 35%;
+    font-size: 20px;
 }
 }
