--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -1,3 +1,7 @@
+.intro-container{
+    /* height: 200px; */
+}
+
 .thumbnail-collection{
     width: 100%;
     /* background-color: lemonchiffon; */
@@ -20,4 +24,11 @@
 .portfolio-thumbnail:hover{
     background-color: red;
     z-index: 2;
+}
+
+.portfolio-row{
+    background-color: aliceblue;
+    display: flex;
+    align-items: center;
+    
 }
